Make dialpad smaller and fixed-width
- Changed dialpad panel from responsive to fixed 380px width
- Reduced dialpad key size (50px min-height, smaller font)
- Transcription panel now takes remaining space
- Maintains responsive behavior on mobile (< 900px)

This gives more room for transcription display.

--- a/twilio/assets/index.html
+++ b/twilio/assets/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <script type="module" crossorigin src="/index-Dc1_7IEi.js"></script>
-    <link rel="stylesheet" crossorigin href="/index-BOMp4tnu.css">
+    <script type="module" crossorigin src="index-Z2F_aT9q.js"></script>
+    <link rel="stylesheet" crossorigin href="index-ChWZE2Cg.css">
   </head>
   <body>
     <div id="root"></div>
